# raylib-magicka

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
